# pyfot

./: .gitignore  api.py  app_state.py  data.py  football.py  main.py  monitor.py  pyproject.toml  requirements.txt  ui.py  utils.py
pyfot/: utils.py
