[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfot"
version = "1.3.0"
authors = [
	{name = "ayoub"},
]
requires-python = "~=3.9"
dependencies = [
	"chime==0.7.0",
	"fake-useragent==1.5.1",
	"plyer==2.1.0",
	"pyjq==2.6.0",
	"requests==2.32.3",
	"urwid==2.6.16",
	"dbus-python==1.3.2",
]

[project.scripts]
pyfot = "pyfot.pyfot:main"
